--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ body {
     
     #startingPage{
         width: 60vw;
-        height: 60vh;
+        height: auto;
     }
 }
 @media  screen and (max-width:450px) {
